--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="fr">
+
+<!-- Mirrored from demo.themewerk.com/sooncome/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Oct 2020 12:24:05 GMT -->
 <head>
-	<title></title>
+<title>Animalstore.ma - 1er site d'annonce des animaux au Maroc</title>
+<meta charset="UTF-8" />
+<meta name="keywords" content="Landing, Landing Page, Theme, Template, Landing Theme, Coming Soon, Under Construction" />
+<meta name="description" content="1er site d'annonce des animaux domestiques au maroc. Chat, chien, oiseaux, poisson .."/>
+<meta name="author" content="Themewerk" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+<link href="css/style.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
-
+  <div class="txt">En cours de construction</div>
+  <div class="meter">
+    <span style="width: 75%"></span>
+  </div>
+  <footer>
+    By <a href="https://hicham.tech">Hicham.tech</a>
+  </footer>
 </body>
+
+<!-- Mirrored from demo.themewerk.com/sooncome/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 19 Oct 2020 12:24:13 GMT -->
 </html>
