--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <div class="txt">En cours de construction</div>
+  <div class="txt"><h1>En cours de construction..</h1></div>
   <div class="meter">
     <span style="width: 75%"></span>
   </div>
