--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+  <img src="images/logo.svg">
   <div class="txt"><h1>En cours de construction..</h1></div>
   <div class="meter">
     <span style="width: 75%"></span>
