--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 </head>
 <body>
-  <img src="images/logo.svg">
+  <img src="images/logo.svg" class="logo">
+  <object data="images/logo.svg" type="image/svg+xml">
+</object>
   <div class="txt"><h1>En cours de construction..</h1></div>
   <div class="meter">
     <span style="width: 75%"></span>
