--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 </head>
 <body>
-  <img src="images/logo.svg" class="logo">
-  <object data="images/logo.svg" type="image/svg+xml">
+  <object data="images/logo.svg" class="logo" type="image/svg+xml">
 </object>
   <div class="txt"><h1>En cours de construction..</h1></div>
   <div class="meter">
