--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
 </head>
 <body>
-  <object data="images/logo.svg" class="logo" type="image/svg+xml">
-</object>
-  <div class="txt"><h1>En cours de construction..</h1></div>
+  <div class="txt"><h1>Nom de domaine à vendre</h1></div>
   <div class="meter">
     <span style="width: 75%"></span>
   </div>
